--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DB_URI="mongodb+srv://admin:XkmOnqp43WVFyXdA@cluster0.xq9xbsu.mongodb.net/?retryWrites=true&w=majority"
+DB_URI="mongodb+srv://<username>:<password>@cluster0.xq9xbsu.mongodb.net/?retryWrites=true&w=majority"
